# seata

./: .dockerignore  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Makefile  README-Docker.md  README.md  conf.yaml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
k8s/: cert-issuer.yaml  gateway.yaml  ingress.yaml  k6-loadtest.yaml  redis-cluster.yaml  seata-server-50k.yaml  seata-server.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: seata-dashboard.json
scripts/: start.sh  test-api.sh
seata-proto/: Cargo.toml  build.rs
seata-proto/src/: lib.rs
seata-server/: API_USAGE.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  README.md
seata-server/src/: barrier.rs  benchmark_tests.rs  business_scenario_tests.rs  domain.rs  error_tests.rs  grpc_tests.rs  http_tests.rs  integration_tests.rs  lib.rs  main.rs  performance_tests.rs  repo.rs  saga.rs  scheduler.rs  settings.rs  settings_tests.rs  storage_tests.rs  tcc_scenario_tests.rs  test_utils.rs  workflow_scenario_tests.rs
seata-server/src/storage/: mod.rs  redis_kv.rs  sea_kv.rs  sled_kv.rs
