[package]
name = "seata-proto"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tonic = { version = "0.11.0", features = ["transport"] }
prost = "0.12.6"
prost-types = "0.12.6"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.100"

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.6"
