[package]
name = "seata-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.5"
config = "0.15.17"
lazy_static = "1.5.0"
once_cell = "1.21.3"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
prometheus = { version = "0.14.0", features = ["process"] }
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sled = "0.34.7"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.11.0", features = ["transport"] }
tower-http = { version = "0.6.6", features = ["trace", "compression-full", "cors", "fs"] }
tower = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
seata-proto = { path = "../seata-proto" }
uuid = { version = "1.10.0", features = ["v4"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
sea-orm = { version = "0.12", features = ["macros", "runtime-tokio-rustls", "sqlx-mysql", "sqlx-postgres"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22.1"
etcd-client = "0.12"

[dev-dependencies]
tempfile = "3.8.0"
